welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: illegal start of simple pattern
  if (ab==10 || ac==10 || bc==10){return 10}
  ^blueTicket:8: error: '=' expected but '}' found.
  else  {return 0}} 
                  ^